<resources>
    <string name="app_name">Zipt Zopt</string>
    <string name="conversation_image_content_description">Image of the contact or the group</string>
    <string name="search_name_menu">Search</string>
    <string name="new_group_name_menu">New group</string>
    <string name="new_transmission_name_menu">New transmission</string>
    <string name="favorite_messages_name_menu">Favorite messages</string>
    <string name="configurations_name_menu">Configurations</string>
    <string name="chat_tab_name">Chat</string>
    <string name="status_tab_name">Status</string>
    <string name="calls_tab_name">Calls</string>
    <string name="configurations">Configurations</string>
    <string name="account_configurations">Account</string>
    <string name="text_account_configurations">Privacy, security, change number</string>
    <string name="chat_configurations">Chat</string>
    <string name="text_chat_configurations">Theme, wallpaper, chat history</string>
    <string name="notifications_configurations">Notifications</string>
    <string name="text_notifications_configurations">Message, group ringing, call</string>
    <string name="storage_configurations">Storage and data</string>
    <string name="text_storage_configurations">Network usage, automatic download</string>
    <string name="help_configurations">Help</string>
    <string name="text_help_configurations">Help center, contact us, privacy policy</string>
    <string name="invite_a_friend_text">Invite a friend</string>
    <string name="text_not_from">not from</string>
    <string name="facebook">FACEBOOK</string>
    <string name="favorite_messages_text">Favorite messages</string>
    <string name="disfavor_all_text">Disfavor all</string>
    <string name="your_name_text">Your name</string>
    <string name="your_message_text">Your message</string>
    <string name="profile_text">Profile</string>
    <string name="name_text">Name</string>
    <string name="profile_name_disclaimer">This is not your username or your PIN. This name will be visible to your ZiptZopt contacts.</string>
    <string name="message_text">Message</string>
    <string name="phone_text">Phone</string>
    <string name="phone_example">+00 00 00000-0000</string>
    <string name="status_privacy_menu_text">Status privacy</string>
    <string name="clear_call_log_menu_text">Clear call log</string>
    <string name="account_text">Account</string>
    <string name="privacy_text">Privacy</string>
    <string name="security_text">Security</string>
    <string name="two_step_verification_text">Two-step verification</string>
    <string name="change_number_text">Change number</string>
    <string name="request_account_data_text">Request account data</string>
    <string name="delete_my_account_text">Delete my account</string>
    <string name="security_ziptzopt">ZiptZopt does not protect your conversations with end-to-end encryption. Your messages, calls and status updates may not be just between you and the people you choose. Even ZiptZopt can read or listen to them.</string>
    <string name="two_step_verification_ziptzopt">For added security, enable two-step verification, which will ask for a PIN when you register your phone number with ZiptZopt again.</string>
    <string name="activate_text">Activate</string>
    <string name="defined_as_text">Defined as</string>
    <string name="select_message_text">Select message</string>
    <string name="occupied_text">Occupied</string>
    <string name="available_text">Available</string>
    <string name="in_school_text">In school</string>
    <string name="at_the_movies_text">At the movies</string>
    <string name="at_work_text">At work</string>
    <string name="battery_about_to_run_out_text">Battery about to run out</string>
    <string name="i_cant_speak_only_ziptzopt_text">I can\'t speak, only ZiptZopt</string>
    <string name="in_meeting_text">In meeting</string>
    <string name="at_the_gym_text">At the gym</string>
    <string name="sleeping_text">Sleeping</string>
    <string name="only_urgent_calls_text">Only urgent calls</string>
    <string name="enter_six_digit_code_text">Enter 6-digit code</string>
    <string name="verify_your_phone_number_text">Verify your phone number</string>
    <string name="phone_enter_screen_text">ZiptZopt will send an SMS message (carrier charges may apply) to verify your phone number. Enter your country code and phone number:</string>
    <string name="phone_number_hint_text">phone number</string>
    <string name="plus_hint_text">+</string>
    <string name="phone_enter_age_disclaimer_text">You must be at least 16 years old to register. Learn how ZiptZopt works without Facebook Companies</string>
    <string name="next_text">Next</string>
    <string name="verify_number">Verify %s</string>
    <string name="waiting_for_verifying">Waiting to automatically detect an SMS sent to %s.</string>
    <string name="cancel_text">Cancel</string>
    <string name="save_text">Save</string>
    <string name="insert_your_name_text">Insert your name</string>
    <string name="add_message">Add message</string>
    <string name="add_to_contacts_text">Add to contacts</string>
    <string name="media_links_and_docs_text">Media, links and docs</string>
    <string name="search_text">Search</string>
    <string name="silence_notifications_text">Silence notifications</string>
    <string name="wallpaper_text">Wallpaper</string>
    <string name="type_a_message_text">Type a message</string>
    <string name="contacts_text">Contacts</string>
    <string name="contacts_number">%1$s %2$s</string>
    <string name="update_text">Update</string>
    <string name="help_text">Help</string>
    <string name="profile_data_text">Profile data</string>
    <string name="create_account_mainText">Please provide your name and a profile photo (optional).</string>
    <string name="name_length_too_short_message">Your name must have at least 1 char</string>
    <string name="contacts_text_not_capitalized">contacts</string>
    <string name="contact_text_not_capitalized">contact</string>
</resources>