<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_menu"
        android:icon="@drawable/search_icon"
        android:title="@string/search_name_menu"
        app:showAsAction="ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <item
        android:id="@+id/invite_friend"
        android:title="@string/invite_a_friend_text"
        app:showAsAction="never" />

    <item
        android:id="@+id/contacts"
        android:title="@string/contacts_text"
        app:showAsAction="never" />

    <item
        android:id="@+id/update"
        android:title="@string/update_text"
        app:showAsAction="never" />

    <item
        android:id="@+id/help"
        android:title="@string/help_text"
        app:showAsAction="never" />
</menu>