<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75"/>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/configurations_toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:title="@string/profile_text" />

    </com.google.android.material.appbar.AppBarLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_imageView"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        tools:civ_circle_background_color="@color/gray"
        tools:src="@drawable/image_person" />

    <ImageView
        android:id="@+id/ic_person"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_person"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@id/profile_imageView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/ic_person"
        app:layout_constraintStart_toEndOf="@id/ic_person"
        android:layout_marginStart="16dp"
        android:text="@string/name_text"/>

    <TextView
        android:id="@+id/your_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/name_text"
        app:layout_constraintStart_toStartOf="@id/name_text"
        android:text="@string/your_name_text"/>

    <TextView
        android:id="@+id/name_disclaimer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/profile_name_disclaimer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/your_name"
        app:layout_constraintTop_toBottomOf="@id/your_name" />

    <View
        android:id="@+id/first_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/name_disclaimer"
        app:layout_constraintTop_toBottomOf="@id/name_disclaimer" />

    <ImageView
        android:id="@+id/ic_info"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_info"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/first_divider"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/message_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/ic_info"
        app:layout_constraintStart_toEndOf="@id/ic_info"
        android:layout_marginStart="16dp"
        android:text="@string/message_text"/>

    <TextView
        android:id="@+id/your_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/message_text"
        app:layout_constraintStart_toStartOf="@id/message_text"
        android:text="@string/your_message_text"/>

    <View
        android:id="@+id/second_divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/name_disclaimer"
        app:layout_constraintTop_toBottomOf="@id/your_message" />

    <ImageView
        android:id="@+id/ic_phone"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_phone"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/second_divider"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/phone_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/ic_phone"
        app:layout_constraintStart_toEndOf="@id/ic_phone"
        android:layout_marginStart="16dp"
        android:text="@string/phone_text"/>

    <TextView
        android:id="@+id/your_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/phone_text"
        app:layout_constraintStart_toStartOf="@id/phone_text"
        android:text="@string/phone_example"/>

</androidx.constraintlayout.widget.ConstraintLayout>