<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/configurations_toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:title="@string/profile_text" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_imageView"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:layout_width="match_parent"
            android:minWidth="160dp"
            android:layout_height="160dp"
            app:civ_circle_background_color="@color/gray"
            android:src="@drawable/image_person" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/name_profile_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:paddingEnd="0dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground">

        <ImageView
            android:id="@+id/ic_person"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_person" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/roboto"
                android:text="@string/name_text" />

            <TextView
                android:id="@+id/your_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/roboto"
                android:text="@string/your_name_text"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name_disclaimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/roboto"
                android:text="@string/profile_name_disclaimer" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/first_divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="64dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:id="@+id/message_profile_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:paddingEnd="0dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground">

        <ImageView
            android:id="@+id/ic_info"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_info" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/message_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/roboto"
                android:text="@string/message_text" />

            <TextView
                android:id="@+id/your_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/roboto"
                android:text="@string/your_message_text" />

        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/second_divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="64dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:paddingEnd="0dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground">

        <ImageView
            android:id="@+id/ic_phone"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_phone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/phone_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/phone_text"/>

            <TextView
                android:id="@+id/your_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/phone_example"/>

        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/third_divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="64dp"
        android:background="@android:color/darker_gray" />

</LinearLayout>